test/libyul/yulSyntaxTests/objects/data_first.yul
object "A" {
  data "B" ""
  code {}
}
// ----
// ParserError 2314: (15-19): Expected 'code' but got identifier
